--- a/Baha'i/Baha/TOB/Cover.html
+++ b/Baha'i/Baha/TOB/Cover.html
@@ -37,18 +37,16 @@
 
 <table border="1" cellspacing="2" cellpadding="0" WIDTH="100%" bgcolor="">
 <tr>
-       <td BACKGROUND="coverphoto.jpg" >
+       <td BACKGROUND="coverphoto.jpg" ><a name="cover"></a>
 	   <br><br><br><br>
 	   <center><h3><big><big><font color="#f6d574"><i>Tablets</i></font></big></big></h3></center><p>
 	   <center><h3><big><big><font color="#f6d574"><i>of</i></font></big></big></h3></center><p>
 	   <center><h3><big><big><font color="#f6d574"><i>Bahá'u'lláh</i></font></big></big></h3></center><p>
 	   <br><br><br><br><br><br><br>
 	   </td>
-	   <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover2"></a>
 	<br><br><br>
 	<center><i><h1>Tablets<br>of<br>Bahá'u'lláh</h1>
 	revealed after the Kitáb-i-Aqdas<p>
@@ -63,11 +61,9 @@
 	BAHÁ'Í PUBLISHING TRUST<br>WILMETTE, ILLINOIS 60091</center>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
 </tr>
 <tr>
-	<td>
+	<td><a name="cover3"></a>
 	<br><br><br>
 	<center><small>
 	Bahá'í Publishing Trust, Wilmette, IL 60091<p>
@@ -100,8 +96,6 @@
 	</small>
 	<br><br><br>
 	</td>
-	<td></td>
-	<td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 
 </table>
