--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -64,7 +64,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p352">p. 352</a>
+	["All glory be to this Day..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p352">p. 352</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">3</DIV></center><p></small></td>
 </tr>
@@ -74,7 +74,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p355">p. 355</a>
+	["Seized with transports of joy..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p355">p. 355</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">4</DIV></center><p></small></td>
 </tr>
@@ -84,7 +84,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p356">p. 356</a>
+	["No sooner had her voice..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p356">p. 356</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -94,8 +94,9 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p357">p. 357</a><p>
-	["Hasten forth and circumambulate..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p358">p. 358</a>
+	["Call out to Zion..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p357">p. 357</a><p>
+	["Hasten forth and circumambulate..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p358">p. 358</a><p>
+	["Ere long will God sail His Ark..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p361">p. 361</a> 	
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">5</DIV></center><p></small></td>
 </tr>
@@ -104,7 +105,8 @@
 	Sanctified be the Lord of all mankind, at the mention of Whose name all the atoms of the earth have been made to vibrate, and the Tongue of Grandeur hath been moved to disclose that which had been wrapt in His knowledge and lay concealed within the treasury of His might. He, verily, through the potency of His Name, the Mighty, the All-Powerful, the Most High, is the ruler of all that is in the heavens and all that is on earth.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["Sanctified be the Lord..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p351-367Ch23.html#p357">p. 357</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2368,7 +2370,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para283">p. 216</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p073-086Ch04.html#p85">p. 85</a>; vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html">ch. 22</a>, <a href="../../Others/ROB/V4/p429-431Apndx_II.html">Appendix II</a>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Dunyá"><i>Lawh-i-Dunyá</i></a>]
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">81</DIV></center><p></small></td>
 </tr>
@@ -2434,7 +2436,8 @@
 	Justice is, in this day, bewailing its plight, and Equity groaneth beneath the yoke of oppression. The thick clouds of tyranny have darkened the face of the earth, and enveloped its peoples. Through the movement of Our Pen of glory We have, at the bidding of the omnipotent Ordainer, breathed a new life into every human frame, and instilled into every word a fresh potency. All created things proclaim the evidences of this worldwide regeneration. This is the most great, the most joyful tidings imparted by the Pen of this Wronged One to mankind. Wherefore fear ye, O My well-beloved ones? Who is it that can dismay you? A touch of moisture sufficeth to dissolve the hardened <a name="p85"/>clay out of which this perverse generation is molded. The mere act of your gathering together is enough to scatter the forces of these vain and worthless people.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["Through the movement of Our Pen..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p254">p. 254</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">85</DIV></center><p></small></td>
 </tr>
@@ -2697,7 +2700,8 @@
 	O ye that dwell on earth! The distinguishing feature that marketh the preeminent character of this Supreme Revelation consisteth in that We have, on the one hand, blotted out from the pages of God's holy Book whatsoever hath been the cause of strife, of malice and mischief amongst the children of men, and have, on the other, laid down the essential prerequisites of concord, of understanding, of complete and enduring unity. Well is it with them that keep My statutes.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["O ye that dwell on earth!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p065-106Ch04.html#p87">p. 87</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2706,7 +2710,8 @@
 	Time and again have We admonished Our beloved ones to avoid, nay to flee from, anything whatsoever from which the odor of mischief can be detected. The world is in great turmoil, and the minds of its people are in a state of utter confusion. We entreat the Almighty that He may graciously illuminate them with the glory of His Justice, and enable them to discover that which will be profitable unto them at all times and under all conditions. He, verily is the All-Possessing, the Most High.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["Time and again..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p065-106Ch04.html#p87">p. 87</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -4454,7 +4459,7 @@
 	1. Arabic.<p>
 	<hr>
 	<i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CXII">CXII</a><p>
-	["O well-beloved ones!...] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p190-204Ch13.html#p196">p. 196</a><p>
+	["O well-beloved ones!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p190-204Ch13.html#p196">p. 196</a><p>
 	["Ye are the fruits of one tree..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p253-274Ch12.html#p270">p. 270</a><p>
 	["The structure of world stability..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p294">p. 294</a><p>
 	["Justice hath a mighty force..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p295">p. 295</a><p>
@@ -5076,7 +5081,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>Gleanings</i> <a href="../GL/p003-346.html#LXXIX">LXXIX</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html">p. 205</a><p>
+	<i>Gleanings</i> <a href="../GL/p003-346.html#LXXIX">LXXIX</a><p>
+	["As to thy question..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html">p. 205</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">188</DIV></center><p></small></td>
 </tr>
