--- a/Baha'i/Baha/TSVATFV.html
+++ b/Baha'i/Baha/TSVATFV.html
@@ -7,7 +7,7 @@
 	<title>The Seven Valleys And The Four Valleys</title>
 </head>
 
-<body BACKGROUND=BK3.JPG>
+<body>
 
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
