--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -7,7 +7,7 @@
 	<title>The Hidden Words of Bahá'u'lláh</title>
 </head>
 
-<body BACKGROUND=BK3.JPG>
+<body>
 
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
@@ -66,7 +66,7 @@
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="arabic2">Arabic #2</a></center><p>
-	   <i>Tablets of Bahá'u'lláh</i>, <a href="TOB/p001-270TOB.html#p37">p. 37</a><p>
+	   <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="GL/Introduction.html#para14">viii</a>; <i>Tablets of Bahá'u'lláh</i>, <a href="TOB/p001-270TOB.html#p37">p. 37</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../Others/ROB/V3/p275-307Ch13.html#p295">p. 295</a>
 	   </small></td>
 </tr>
