--- a/CLUG/UnifiedGlossary.html
+++ b/CLUG/UnifiedGlossary.html
@@ -103,7 +103,7 @@ Key:<p>
 	<blockquote>
 	{<tt>ESW</tt>: The Pen of the Most Glorious; that is, the power of the Holy Spirit manifested through the Prophet's writings}
 	</blockquote>
-<b>Abjad</b><a name="Abjad"></a>
+<b><a href="../CLUI/UnifiedIndex.html#Abjad">Abjad</a></b><a name="Abjad"></a>
 	<blockquote>
 	{<tt>KA</tt>: The ancient Arabic system of allocating a numerical value to letters of the alphabet, so that numbers may be represented by letters and vice versa.  Thus every word has both a literal meaning and a numerical value}
 	</blockquote>
@@ -187,6 +187,10 @@ Key:<p>
 <b>Amalekites</b><a name="Amalekites"></a>
 	<blockquote>
 	{<tt>KI</tt>: Expelled in early times from Babylonia, they spread through Arabia to Palestine and Syria and as far as Egypt, to which they gave several of its Pharaohs}
+	</blockquote>
+<a href="../CLUI/UnifiedIndex.html#Amanuensis"><b>Amanuensis</b></a><a name="Amanuensis"></a>
+	<blockquote>
+	{<tt>CLUG</tt>: A person employed to write what another dictates or to copy what has been written by another, and also refers to a person who signs a document on behalf of another under the latter's authority. The term is often used interchangeably with secretary or scribe.}
 	</blockquote>
 <b>Amír</b><a name="Amír"></a>
 	<blockquote>
@@ -449,7 +453,8 @@ Key:<p>
 	</blockquote>
 <b><a href="../CLUI/UnifiedIndex.html#Há(letter)">Há</a></b><a name="Há"></a>
 	<blockquote>
-	{<tt>KI</tt>: The letter H, the number of which is 5, and which is sometimes used as a symbol of Bahá'u'lláh: see <i>Four Valleys</i>, <a href="../Baha'i/Baha/TSVATFV.html#p59">p. 59</a> n.}
+	{<tt>KI</tt>: The letter H, the number of which is 5, and which is sometimes used as a symbol of Bahá'u'lláh: see <i>Four Valleys</i>, <a href="../Baha'i/Baha/TSVATFV.html#p59">p. 59</a> n.}<p>
+	<i>see also</i> <a href="#Abjad">Abjad</a>
 	</blockquote>
 <b>Hájí</b><a name="Hájí"></a>
 	<blockquote>
@@ -1335,6 +1340,10 @@ Key:<p>
 	<blockquote>
 	{<tt>DBNN</tt>: A sum of money equivalent to a dollar}
 	</blockquote>
+<b><a href="../CLUI/UnifiedIndex.html#Turner,RobertC">Turner, Robert C.</a></b><a name="Turner,RobertC"></a>
+	<blockquote>
+	{<tt>CLUG</tt>: The first African American to embrace the Faith of Bahá’u’lláh in the West, a believer so outstanding as to be designated a Disciple of ‘Abdu’l-Bahá and Herald of the Covenant by Shoghi Effendi}
+	</blockquote>	
 <b><a href="../CLUI/UnifiedIndex.html#'Urvatu'l-Vuthqá,newspaper">'Urvatu'l-Vuthqá</a></b><a name="'Urvatu'l-Vuthqá"></a>
 	<blockquote>
 	{<tt>KI</tt>: Literally, 'the strongest handle,' meaning the Faith of God}
@@ -1400,7 +1409,7 @@ Key:<p>
 	   </td>
 </tr>
 </table>
-<small><small><small>The Covenant Library Unified Glossary, V1.1.0.0</small></small></small>
+<small><small><small>The Covenant Library Unified Glossary, V1.2.0.0</small></small></small>
 <br>
 
 
