--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <center><i>"...immerse yourselves in this Ocean<br>in whose depths lay hidden<br>the pearls of wisdom and of utterance..."</i> <br><small>--Bahá'u'lláh</small></center>
 <h2><center>Table of Contents</center></h2>
 <br><br>
-<table border="0"  width='95%'>
+
+
+<table border="0"  width="95%">
 
 <tr>
        <td><h3><b><i>Bahá'u'lláh</i></b></h3></td>
@@ -34,7 +36,7 @@
 		   </h4>
 	   </td>
 	   
-       <td valign='top'>
+       <td valign='top' style="float:none;">
 	   	   <h4>
 	   	   <ul type=disc>
 		   	   <li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
@@ -56,7 +58,7 @@
 <br>
 
 <h3><b><i>Others</i></b></h3>
-     <blockquote>
+     <blockquote  style="float:none;">
 	 	  <h4>Nabíl-i-A'zam
 		  <ul type=disc>
 		       <li><a href="Baha'i/Others/DBNN/Cover.html">The Dawn-Breakers, Nabíl's Narrative</a></li>
@@ -81,14 +83,17 @@
 
 <h4>Covenant Library Unified Index: <a href="CLUI/UnifiedIndex.html">Collapsed</a> / <a href="CLUI/UnifiedIndex-F.html">Flat</a></h4>
 
+<h4><a href="Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm">Covenant Library Bahá'í Dates Calendar</a></h4>
+
 <h4><a href="search.html">Search</a></h4>
 
 <h4><font color="#bd1a03"><a href="download.html">Download Center</a></font></h4>
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library, version 1.11.2.<br>
+<small><p><i>The Covenant Library, version 1.11.3.<br>
 Best viewed with desktop versions of Firefox or Chrome browsers</i>
+</div>
 <p>
 </body>
 </html>
