--- a/Baha'i/Others/ROB/V1/Cover.html
+++ b/Baha'i/Others/ROB/V1/Cover.html
@@ -3,8 +3,8 @@
 
 <!-- ISSUES LOG
 
-Throughout the 4 volumes of this work, multiple spellings for the same word are used.
-I am listing those words here in the hopes that someday I will find out which spelling
+Throughout the 4 volumes of this work, multiple spellings for the same word are used.  
+I am listing those words here in the hopes that someday I will find out which spelling 
 is the correct spelling and make the corrections:
 
 =================
@@ -19,7 +19,7 @@ Dunya, Dunyá
 Faizí, Faizi
 Fara'id, Fará'id
 Fárid, Faríd
-firmans, farmáns
+firmans, farmáns 
 Fusúl-i-Arba'ih, Fusul Arbá'ih
 Habíbu'lláh, Habíb'u'lláh
 Hádiy, Hádíy
@@ -61,7 +61,7 @@ Ruknid, Rukni'd
 Sabzavárí, Sabzivárí
 Saráj'u'l, Saráju'l
 Sháfí, Shafí
-Shahmírzád, Sháhmírzád
+Shahmírzád, Sháhmírzád 
 Shí'ih, Shí'ah
 Shuhada, Shuhadá
 Táqí, Taqí
@@ -73,7 +73,7 @@ Zaman, Zamán
 Zarghání, Zarqání
 
 The following words are questionable but I have kept the spelling that matches the printed version:
-Vol 1
+Vol 1 
   p 146 loth
   p 215 encyclopaedias
   p 243 sepulchre
@@ -92,7 +92,7 @@ Vol 1
        <td>
 	   	   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>  
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../../index.html" METHOD=GET>
@@ -105,24 +105,23 @@ Vol 1
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
 
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
-       <td BGCOLOR="#689ccb">
+       <td BGCOLOR="#689ccb"><a name="cover"></a>
 	   <center><h2><big><font color="#ffffff">The Revelation of</font></big></h2></center><p>
 	   <center><h1><big><font color="#ffffff">Bahá'u'lláh</font></big></h1></center><p>
 	   <center><b>VOLUME ONE</b></center><p>
 	   <center><img src="i/coverphoto.jpg" border="0" alt="cover" align="middle"></center><p>
 	   <center><h2><big><font color="#ffffff">Adib Taherzadeh</font></big></h2></center><p><p></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover2"></a><br><br><br><br>
+	   <blockquote>
 	   <i>By the same author</i><p>
 	   TRUSTEES OF THE MERCIFUL<br>
 	   (Bahá'í Publishing Trust, London, 1972)<p>
@@ -132,12 +131,12 @@ Vol 1
 	   &nbsp;&nbsp;'Akká, The Early Years 1868-77<p>
    	   THE REVELATION OF BAHÁ'U'LLÁH<br>
 	   &nbsp;&nbsp;Mazra'ih and Bahjí 1877-92
-	   <br><br><br><br></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
+	   <br><br><br><br>
+	   </blockquote>
+	   </td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover3"></a><br><br><br><br>
 	   <center><h2>The Revelation of</h2></center><p>
 	   <center><h1>Bahá'u'lláh</h1></center><p>
 	   <center>________________</center><p>
@@ -149,11 +148,9 @@ Vol 1
 	   <center>OXFORD</center>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 <tr>
-       <td>
+       <td><a name="cover4"></a>
 	   <br><br><br><br>
 	   <small><center>
 	   GEORGE RONALD, Publisher<p>
@@ -177,11 +174,9 @@ Vol 1
 	   </center></small>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover4"></a></center><p></small></td>
 </tr>
 
-   <tr>
+<tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="cover5"></a>
 	   	   <img src="i/2.bmp" width="500" height="625" border="0" align="middle" ALT="TABLET OF THE HOLY MARINER">
@@ -195,10 +190,10 @@ Vol 1
 	   </small>
 	   <br><br><br><br>
 	   </td>
-   </tr>
+</tr>
 
 <tr>
-       <td>
+       <td><a name="cover6"></a>
 	   <center>
 	   <br><br><br><br>
 	   To those brilliant souls<br>
@@ -208,8 +203,7 @@ Vol 1
 	   <br><br><br><br>
 	   </center>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover6"></a></center><p></small></td>
+
 </tr>
 </table>
 
@@ -231,7 +225,7 @@ Vol 1
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
