--- a/Baha'i/Others/ROB/V2/Cover.html
+++ b/Baha'i/Others/ROB/V2/Cover.html
@@ -52,17 +52,17 @@ Vol 2
 
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
-       <td BGCOLOR="#EC3048">
+       <td BGCOLOR="#EC3048"><a name="cover"></a>
 	   <center><h2><big><font color="#ffffff">The Revelation of</font></big></h2></center><p>
 	   <center><h1><big><font color="#ffffff">Bahá'u'lláh</font></big></h1></center><p>
 	   <center><b>VOLUME TWO</b></center><p>
 	   <center><img src="i/coverphoto.jpg" border="0" alt="cover" align="middle"></center><p>
 	   <center><h2><big><font color="#ffffff">Adib Taherzadeh</font></big></h2></center><p><p></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover2"></a>
+	   <blockquote>
+	   <br><br><br><br>
 	   <i>By the same author</i><p>
 	   TRUSTEES OF THE MERCIFUL<br>
 	   (Bahá'í Publishing Trust, London, 1972)<p>
@@ -72,12 +72,12 @@ Vol 2
 	   &nbsp;&nbsp;'Akká, The Early Years 1868-77<p>
    	   THE REVELATION OF BAHÁ'U'LLÁH<br>
 	   &nbsp;&nbsp;Mazra'ih and Bahjí 1877-92
-	   <br><br><br><br></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
+	   <br><br><br><br>
+	   </blockquote>
+	   </td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover3"></a><br><br><br><br>
 	   <center><h2>The Revelation of</h2></center><p>
 	   <center><h1>Bahá'u'lláh</h1></center><p>
 	   <center>________________</center><p>
@@ -89,11 +89,9 @@ Vol 2
 	   <center>OXFORD</center>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 <tr>
-       <td>
+       <td><a name="cover4"></a>
 	   <br><br><br><br>
 	   <small><center>
 	   GEORGE RONALD, Publisher<p>
@@ -131,8 +129,6 @@ Vol 2
 	   </center></small>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover4"></a></center><p></small></td>
 </tr>
 
    <tr>
@@ -153,7 +149,7 @@ Vol 2
    </tr>
 
 <tr>
-       <td>
+       <td><a name="cover6"></a>
 	   <center>
 	   <br><br><br><br>
 	   To those brilliant souls<br>
@@ -163,8 +159,6 @@ Vol 2
 	   <br><br><br><br>
 	   </center>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover6"></a></center><p></small></td>
 </tr>
 </table>
 
