--- a/Baha'i/Others/ROB/V3/Cover.html
+++ b/Baha'i/Others/ROB/V3/Cover.html
@@ -61,17 +61,17 @@ Vol 3
 
 <table border="1" cellspacing="2" cellpadding="2" height="100" bgcolor="">
 <tr>
-       <td BGCOLOR="#00925b">
+       <td BGCOLOR="#00925b"><a name="cover"></a>
 	   <center><h2><big><font color="#ffffff">The Revelation of</font></big></h2></center><p>
 	   <center><h1><big><font color="#ffffff">Bahá'u'lláh</font></big></h1></center><p>
 	   <center><b>VOLUME THREE</b></center><p>
 	   <center><img src="i/coverphoto.jpg" border="0" alt="cover" align="middle"></center><p>
 	   <center><h2><big><font color="#ffffff">Adib Taherzadeh</font></big></h2></center><p><p></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover2"></a>
+	   <blockquote>
+	   <br><br><br><br>
 	   <i>By the same author</i><p>
 	   TRUSTEES OF THE MERCIFUL<br>
 	   (Bahá'í Publishing Trust, London, 1972)<p>
@@ -81,12 +81,12 @@ Vol 3
 	   &nbsp;&nbsp;Adrianople 1863-68<p>
    	   THE REVELATION OF BAHÁ'U'LLÁH<br>
 	   &nbsp;&nbsp;Mazra'ih and Bahjí 1877-92
-	   <br><br><br><br></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
+	   <br><br><br><br>
+	   </blockquote>
+	   </td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover3"></a><br><br><br><br>
 	   <center><h2>The Revelation of</h2></center><p>
 	   <center><h1>Bahá'u'lláh</h1></center><p>
 	   <center>________________</center><p>
@@ -98,11 +98,9 @@ Vol 3
 	   <center>OXFORD</center>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 <tr>
-       <td>
+       <td><a name="cover4"></a>
 	   <br><br><br><br>
 	   <small><center>
 	   GEORGE RONALD, Publisher<p>
@@ -134,8 +132,6 @@ Vol 3
 	   </center></small>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover4"></a></center><p></small></td>
 </tr>
 
    <tr>
@@ -154,7 +150,7 @@ Vol 3
    </tr>
 
 <tr>
-       <td>
+       <td><a name="cover6"></a>
 	   <center>
 	   <br><br><br><br>
 	   To those brilliant souls<br>
@@ -164,8 +160,6 @@ Vol 3
 	   <br><br><br><br>
 	   </center>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover6"></a></center><p></small></td>
 </tr>
 </table>
 
