--- a/Baha'i/Others/ROB/V4/Cover.html
+++ b/Baha'i/Others/ROB/V4/Cover.html
@@ -58,17 +58,17 @@ Vol 4
 
 <table border="1" cellspacing="2" cellpadding="2" height="100" width="100%" bgcolor="">
 <tr>
-       <td BGCOLOR="#fb8728">
+       <td BGCOLOR="#fb8728"><a name="cover"></a>
 	   <center><h2><big><font color="#ffffff">The Revelation of</font></big></h2></center><p>
 	   <center><h1><big><font color="#ffffff">Bahá'u'lláh</font></big></h1></center><p>
 	   <center><b>VOLUME FOUR</b></center><p>
 	   <center><img src="i/coverphoto.jpg" alt="cover" align="middle"></center><p>
 	   <center><h2><big><font color="#ffffff">Adib Taherzadeh</font></big></h2></center><p><p></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover"></a></center><p></small></td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover2"></a>
+	   <blockquote>
+	   <br><br><br><br>
 	   <i>By the same author</i><p>
 	   TRUSTEES OF THE MERCIFUL<br>
 	   (Bahá'í Publishing Trust, London, 1972)<p>
@@ -78,12 +78,14 @@ Vol 4
 	   &nbsp;&nbsp;Adrianople 1863-68<p>
    	   THE REVELATION OF BAHÁ'U'LLÁH<br>
 	   &nbsp;&nbsp;'Akká, The Early Years 1868-77
-	   <br><br><br><br></td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover2"></a></center><p></small></td>
+	   <br><br><br><br>
+	   </blockquote>
+	   </td>
 </tr>
 <tr>
-       <td><br><br><br><br>
+       <td><a name="cover3"></a>
+	   <blockquote>
+	   <br><br><br><br>
 	   <center><h2>The Revelation of</h2></center><p>
 	   <center><h1>Bahá'u'lláh</h1></center><p>
 	   <center>________________</center><p>
@@ -94,12 +96,11 @@ Vol 4
 	   <center>GEORGE RONALD</center><br>
 	   <center>OXFORD</center>
 	   <br><br><br><br>
+	   </blockquote>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover3"></a></center><p></small></td>
 </tr>
 <tr>
-       <td>
+       <td><a name="cover4"></a>
 	   <br><br><br><br>
 	   <small><center>
 	   GEORGE RONALD, Publisher<p>
@@ -132,10 +133,7 @@ Vol 4
 	   </center></small>
 	   <br><br><br><br>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover4"></a></center><p></small></td>
 </tr>
-
    <tr>
        <td valign="top">
 	   <H1 ALIGN=center><a name="cover5"></a>
@@ -149,10 +147,9 @@ Vol 4
 	   </small>
 	   <br><br><br><br>
 	   </td>
-   </tr>
-
+</tr>
 <tr>
-       <td>
+       <td><a name="cover6"></a>
 	   <center>
 	   <br><br><br><br>
 	   To those brilliant souls<br>
@@ -162,8 +159,6 @@ Vol 4
 	   <br><br><br><br>
 	   </center>
 	   </td>
-       <td></td>
-       <td VALIGN=top><small><center><a name="cover6"></a></center><p></small></td>
 </tr>
 </table>
 
