--- a/Baha'i/Others/ROB/V4/p073-090Ch05.html
+++ b/Baha'i/Others/ROB/V4/p073-090Ch05.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p050-072Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p091-102Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -62,7 +62,7 @@
 <tr>
        <td>
 	   showered upon them is ample testimony to the loftiness of their station, the nobility of their character and the purity of their souls. After the death of Mír Siyyid Muhammad, the host to the Báb, the position of Imám-Jumi'h went to his brother, Mír Muhammad-Husayn. This man, the new Imám, left the management of his financial affairs in the hands of the two brothers who were the most trustworthy persons he could find. Time passed, during which the Imám-Jumi'h became rich and prosperous through the many financial transactions negotiated for him. He was quite satisfied with the handling of his financial affairs until he was informed that he owed the two brothers a considerable sum of money. It was at this point that the ferocious and beastly nature of the Imám-Jumi'h came to the surface and he turned his evil thoughts to one course of action only--to take the lives of the two who had served him with absolute faithfulness and honesty. How appropriate is Bahá'u'lláh's denunciation of this wicked Imám as 'Raqshá' (the She-Serpent), poised to strike mercilessly at the two embodiments of loving-kindness and compassion.<p>
-	   To carry out his evil intentions, he combined forces with another equally wicked member of the clergy, an inveterate enemy of the Cause, Shaykh Báqir, the leading mujtahid* of the city whom Bahá'u'lláh later denounced as <i>Dhi'b</i> (Wolf). They both knew that taking the lives of the two brothers would not be difficult. All that the mujtahid had to do was to write their death warrant on the grounds that they were Bahá'ís. Having realized that carrying out this evil plan would fulfil not only their long-cherished ambition of inflicting a serious blow upon the community of the Most Great Name by extinguishing the light of two of its shining luminaries, but would also place at their disposal enormous wealth, these two embodiments of wickedness approached Mas'úd Mírzá, the Zillu's-Sultán† (Shadow of the
+	   To carry out his evil intentions, he combined forces with another equally wicked member of the clergy, an inveterate enemy of the Cause, Shaykh Báqir, the leading mujtahid* of the city whom Bahá'u'lláh later denounced as <i>Dhi'b</i> (Wolf). They both knew that taking the lives of the two brothers would not be difficult. All that the mujtahid had to do was to write their death warrant on the grounds that they were Bahá'ís. Having realized that carrying out this evil plan would fulfil not only their long-cherished ambition of inflicting a serious blow upon the community of the Most Great Name by extinguishing the light of two of its shining luminaries, but would also place at their disposal enormous wealth, these two embodiments of wickedness approached Mas'úd Mírzá, the Zillu's-Sultán† (Shadow of the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p75">75</a></center><p>
@@ -143,7 +143,7 @@
 	   denied the verses sent down by Him. This is an implied reference to the Bábís who remained heedless of His Revelation. He calls on him to arise for the triumph of His Faith, to hold the reins of the Faith in his hands and never to allow the Cause to fall into the hands of the unfaithful. This is what God had destined for him.<p>
 	   It must be remembered that in the early days of His Declaration Bahá'u'lláh focused His main attention upon the followers of the Báb. This is because these people had been prepared by the Báb to recognize and embrace the Cause of 'Him Whom God shall make manifest'. The teachers of His Cause in those early days were primarily concerned with teaching the Bábís. Those among the Bábís who turned away from Bahá'u'lláh were addressed by Him as, among other things, the 'evil ones' who had 'repudiated the Cause of God', been 'unfaithful to Him', 'joined partners with God', or 'shown enmity and malice toward His loved ones'. Phrases such as these revealed soon after His Declaration often refer to those followers of the Báb who sided with Mírzá Yahyá* and rose up in opposition against Bahá'u'lláh.<p>
 	   In the fore-mentioned Tablet which seems to have been revealed in Adrianople, Bahá'u'lláh alludes to the story of Joseph and refers to the actions of Mírzá Yahyá. He refers to Himself allegorically as the One who has been thrown into a deep well by reason of the envy of those who had been among His servants, who were created through one word from Him and who have now arisen against their Lord. Thus He alludes to the sufferings which He had endured from some of the Bábís who had not recognized the truth of His Cause. He confers authority on the Beloved of the Martyrs to employ the power of the word of God and, sword-like, separate the faithful believers from the company of the unfaithful who had repudiated Him.<p>
-	   From the early days of the Faith, Bahá'u'lláh made provision for the breakers of the Covenant of God (in this case the followers of Mírzá Yahyá) to be kept out of the community of the believers. In this Tablet, as in many others, Bahá'u'lláh exhorts the
+	   From the early days of the Faith, Bahá'u'lláh made provision for the breakers of the Covenant of God (in this case the followers of Mírzá Yahyá) to be kept out of the community of the believers. In this Tablet, as in many others, Bahá'u'lláh exhorts the 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p81">81</a></center><p>
@@ -159,7 +159,7 @@
 	   In a moving prayer<small><sup>3</sup></small> revealed for the King of the Martyrs, Bahá'u'lláh bestows such bounties upon his soul and upon that of his brother as no pen can adequately describe. He testifies that he has wholly detached himself from all earthly things, and that he has succeeded in attaching himself with the cord of servitude to the exalted dominion of his Lord. This description by Bahá'u'lláh of the relationship of a servant to his Lord, the ties of the truly poor with the riches of an Almighty God, amply demonstrates, as does the study of His other Tablets, that the greatest achievement for man in this life is to empty himself of every desire, recognize his own utter nothingness, follow the commandments of God revealed by His Manifestation and become filled with the power of the Almighty. Bahá'u'lláh testifies that the King of the Martyrs had indeed achieved this exalted station. His wealth and that of his brother did not become a barrier between them and God.<p>
 	   These words of Bahá'u'lláh in <i>The Hidden Words</i> are truly applicable to these twin shining lights of the Cause of God:<p>
 	   <blockquote>O ye that pride yourselves on mortal riches! Know ye in truth that wealth is a mighty barrier between the seeker and his desire, the lover and his beloved. The rich, but for a few, shall in no wise attain the court of His presence nor enter the city of content and resignation. Well is it then with him, who, being rich, is not hindered by his riches from the eternal kingdom, nor deprived by them of imperishable dominion. By the Most Great Name! The splendour of such a wealthy man shall illuminate the dwellers of heaven, even as the sun enlightens the people of the earth!<small><sup>4</sup></small></blockquote>
-	   In a brief Tablet<small><sup>5</sup></small> to the King of the Martyrs Bahá'u'lláh reveals the sadness of His heart when He speaks of the heedlessness of some of His followers. He states that in most of
+	   In a brief Tablet<small><sup>5</sup></small> to the King of the Martyrs Bahá'u'lláh reveals the sadness of His heart when He speaks of the heedlessness of some of His followers. He states that in most of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p82">82</a></center><p>
@@ -216,8 +216,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p86">86</a></center><p>
 	   <hr>
-	   7. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para641">CXLII</a>, pp. 308-9.<p>
-	   8. <i>ibid</i>. C, p. 204.
+	   7. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para641">CXLII</a>, pp. 308-9.<p> 
+	   8. <i>ibid</i>. <a href="../../../Baha/GL/p003-346.html#para410">C</a>, p. 204.
 	   </small></td>
 </tr>
 <tr>
@@ -259,7 +259,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p89">89</a></center><p>
 	   <hr>
-	   12. <i>Núrayn-i-Nayyirayn</i>, pp. 185-6.<p>
+	   12. <i>Núrayn-i-Nayyirayn</i>, pp. 185-6.<p> 
 	   13. <i>ibid</i>. p. 151.<p>
 	   14. Unpublished compilation, National Archives Committee, no. 28, P. 517.
 	   </small></td>
@@ -278,7 +278,7 @@
        <td>
 	   	   <FORM ACTION="p050-072Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -286,12 +286,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p091-102Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
