--- a/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
+++ b/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
@@ -877,8 +877,8 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 </table>
 </div>
 <br>
-<tt><a href="https://www.timeanddate.com/sun/">Sunrise/Sunset Calculator City Lookup</a></tt>
-
+<tt><a href="https://www.timeanddate.com/sun/">Sunrise/Sunset City Lookup</a></tt><p>
+<tt><a href="https://24timezones.com/time-zones">Time Zone List</a> (find your "<b>Standard</b>" time zone (ex: E<b>S</b>T) to see your current Standard Time)</tt>
 <p><br>
 <center><big><big>B. Bahá’í Months</big></big></center>
 <br>
@@ -1012,7 +1012,7 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 </table>
 
 <br>
-<small><p><i>Covenant Library Bahá'í Dates Calendar, version 1.0.0.<br>
+<small><p><i>Covenant Library Bahá'í Dates Calendar, version 1.0.1.<br>
 
 </body>
 </html>
